[package]
name = "url_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
trust-dns-resolver = "0.20"
futures = "0.3"
tokio-stream = "0.1"
log = "0.4"
env_logger = "0.8"
async-trait = "0.1"
clap = "2.33"
regex = "1"
url = "2"